fix: expand doc main container to full width on mobiles (#7030)

--- a/packages/docusaurus-theme-classic/src/theme/DocPage/Layout/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocPage/Layout/styles.module.css
@@ -10,7 +10,8 @@
   --doc-sidebar-hidden-width: 30px;
 }
 
-.docPage {
+.docPage,
+.docMainContainer {
   width: 100%;
 }
 
